...

    public override func viewDidLoad() {
        super.viewDidLoad()

        title = "Nuevo contacto"
        navigationItem.leftBarButtonItem = UIBarButtonItem(
            title: "Cancelar",
            style: .plain,
            target: self,
            action: #selector(cancelTapped)
        )
        navigationItem.leftBarButtonItem?.accessibilityIdentifier = "cancelButton"

        saveButton = UIBarButtonItem(
            title: "Guardar",
            style: .done,
            target: self,
            action: #selector(saveTapped)
        )
        saveButton?.isEnabled = false
        saveButton?.accessibilityIdentifier = "saveButton"
...
