...

@implementation ContactListViewController

- (void)viewDidLoad {
    [super viewDidLoad];

    self.title = @"Contactos";
    self.view.backgroundColor = [UIColor systemBackgroundColor];
    self.viewModel = [[ContactListViewModel alloc] init];

    __weak typeof(self) weakSelf = self;
    self.viewModel.onDataChanged = ^{
        [weakSelf reloadTable];
...
    [self layoutSearchBarHeaderIfNeeded];
}

#pragma mark - Setup

- (void)setupNavigationBar {
    self.addContactBarButton = [[UIBarButtonItem alloc] initWithTitle:@"Nuevo"
                                                      style:UIBarButtonItemStylePlain
                                                     target:self
                                                     action:@selector(newContactTapped)];
    self.addContactBarButton.accessibilityIdentifier = @"newContactButton";

    self.deleteButton = [[UIBarButtonItem alloc] initWithTitle:@"Borrar"
...
